precompiles/macro/tests/compile-fail/precompile/handle/set-wrong-type.stderr
error: This parameter must have type `&mut impl PrecompileHandle`
  --> tests/compile-fail/precompile/handle/set-wrong-type.rs:27:38
   |
27 |     fn foo(_discriminant: u32, _handle: u32) {
   |                                         ^^^
